<resources>
    <string name="app_name">Lab7</string>
    <string name="titletext">Enter your name</string>
    <string name="choosebiketype">What kind of bike do you ride?</string>
    <string name="howmanymiles">How many miles will you ride?</string>
    <string name="roadbike">road</string>
    <string name="name">name</string>
    <string name="mtnbike">mountain</string>
    <string name="answer"></string>
    <string name="submit">submit</string>
    <string name="image">image</string>
    <string-array name="miles">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>

</resources>
